--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
+    "react-reveal": "^1.2.2",
+    "react-transition-group": "^4.4.5",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
